feat: add band chart SVG generation and validation schemas
- Introduced SVG representation for band chart data in `data.svg`.
- Refactored `band.js` to export functions for generating band charts.
- Updated `generate.js` to utilize ES module imports and improved error handling.
- Added JSON schema validation for band chart data and style configurations.
- Enhanced validation logic in `validate.js` to use AJV for schema validation.
- Created test cases for validation functions in `validate.test.ts`.
- Updated package dependencies to include AJV for schema validation.

--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "miomonchart",
   "version": "0.1.0",
   "description": "CLI tool for generating chart SVGs from YAML data",
+  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "miomonchart": "dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r src/schema dist/schema",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "commander": "^12.1.0",
     "js-yaml": "^4.1.0"
   },
